[package]
name = "d15p2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"         # Extra iterator adaptors, iterator methods, free functions, and macros.
utils = {path = "../utils"}
# A lightweight logging facade for Rust 
log = "0.4.14"
# A logging implementation for `log` which is configured via an environment variable. 
env_logger = "0.9.0"
