[package]
name = "d16p2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A lightweight logging facade for Rust 
log = "0.4.14"
# A logging implementation for `log` which is configured via an environment variable. 
env_logger = "0.9.0"
# __attribute__((constructor)) for Rust
ctor = "0.1.21"
# Collection “literal” macros for HashMap, HashSet, BTreeMap, and BTreeSet.
maplit = "1.0.2"
# A macro for declaring lazily evaluated statics in Rust.
lazy_static = "1.4.0"